--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,75 @@
+$n: 15; // 流星數量
+$s: 300; // star數量
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+
+html,body {
+  height: 100%;
+  overflow: hidden;
+  background-image: radial-gradient(ellipse at top , #080e21 0%,  #1b2735 95%);
+}
+
+$shadow: ();
+
+@for $i from 1 through $s {
+  $x: random(1920);
+  $y: random(1000);
+  $shadow: $shadow, ( $x+px $y+px #fff) !global;
+}
+
+.star {
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  box-shadow: $shadow;
+}
+
+@for $i from 1 through $n {
+  $v: random(90) + 9; // left
+  $h: random(250) + 50; // top
+  $d: random(70)/10 + 3; // 秒數
+  .meteor-#{$i} {
+    position: absolute;
+    top: $h + px;
+    left: $v*1%;
+    width: 300px;
+    height: 1px;
+    transform: rotate(-45deg);
+    background-image: linear-gradient(to right, #fff, rgba(255,255,255,0));
+    animation: meteor $d+s linear  infinite;
+    &:before {
+      content: "";
+      position: absolute;
+      width: 4px;
+      height: 5px;
+      border-radius: 50%;
+      margin-top: -2px;
+      background: rgba(#fff,.7);
+      box-shadow: 0 0 15px 3px #fff;
+    }
+    
+  }
+}
+
+@keyframes meteor {
+  0% {
+    opacity: 1;
+    margin-top: -300px;
+    margin-right: -300px;
+  }
+  12% {
+    opacity: 0;
+  }
+  15% {
+    margin-top: 300px;
+    margin-left: -600px;
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 .centered {
   justify-content: center; /* center items horizontally, in this case */
@@ -32,22 +103,6 @@ a{
   margin: 0;
   padding: 0;
 }
-
-/* sources https://unsplash.com/photos/c9OCWLka764 */
-/* body {
-  font-family: 'Poppins', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  min-height: 100vh;
-  background-image: url('imgs/paul-volkmer-qVotvbsuM_c-unsplash.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 250vh 100vh;
-
-  
-} */
 
 .container {
   max-width: 66vh;
@@ -437,4 +492,3 @@ h1{
 #logo{
   max-height: 100px;
 }
-
