--- a/src/index.scss
+++ b/src/index.scss
@@ -10,9 +10,17 @@ html,body {
 }
 
 canvas {
-  height: 50vh;
-  position: relative;
+  height: 100vh;
 }
+
+
+
+.wrapp {
+  position: absolute;
+  top: 0; 
+  width: 100%;
+}
+
 
 $shadow: ();
 
@@ -53,6 +61,21 @@ $shadow: ();
       box-shadow: 0 0 15px 3px #fff;
     }
     
+  }
+}
+
+@keyframes meteor {
+  0% {
+    opacity: 1;
+    top:0;
+    right: 10vh;
+
+  }
+
+  100% {
+    opacity: 0;
+    bottom: 0;
+    right: 100vh;
   }
 }
 
@@ -272,121 +295,6 @@ li:nth-child(7) {
   height: 12.5px;
   box-shadow: inset 2.4px -0.8px 0 0px #414043;
 }
-
-// .p{
-//   z-index: -1;
-//   position:fixed;
-//   left:0px;
-//   top:50px;
-//   width:1px;
-//   height:1px;
-//   background-color:white;
-//   position:fixed;
-//   animation-name:particleAnimation;
-//   animation-timing-function: infinite;
-//   animation-iteration-count: infinite;
-//   -ms-transform: rotate(20deg); /* IE 9 */
-//   transform: rotate(20deg);
-// }
-// .p::before{
-//   position:absolute;
-//   display:block;
-//   content:"";
-//   width:100px;
-//   right:1px;
-//   top:0px;
-//   height:1px;
-//   background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(255,255,255,0.4) 100%); 
-// }
-// .p-1{
-//   animation-duration:20s;
-//   left: 10%;
-// }
-// .p-2{
-//   animation-duration:10s;
-//   top:60%;
-//   left: 40%;
-// }
-// .p-3{
-//   animation-duration:40s;
-//   top:90%;
-//   left: 60%;
-// }
-
-// .p-4{
-//   animation-duration:15s;
-//   left: 25%;
-// }
-// .p-5{
-//   animation-duration:11s;
-//   top:30%;
-//   left: 20%;
-// }
-// .p-6{
-//   animation-duration:50s;
-//   top:33%;
-//   left: 10%;
-// }
-
-// .p-7{
-//   animation-duration:5s;
-//   left: 50%;
-// }
-// .p-8{
-//   animation-duration:3s;
-//   top:10%;
-//   left: 30%;
-// }
-// .p-9{
-//   animation-duration:11s;
-//   top:40%;
-//   left: 60%;
-// }
-
-// .p-11{
-//   animation-duration:7s;
-//   left: 10%;
-// }
-// .p-21{
-//   animation-duration:5s;
-//   top:60%;
-//   left: 40%;
-// }
-// .p-31{
-//   animation-duration:11s;
-//   top:90%;
-//   left: 60%;
-// }
-
-// .p-41{
-//   animation-duration:4s;
-//   left: 25%;
-// }
-// .p-51{
-//   animation-duration:2s;
-//   top:30%;
-//   left: 20%;
-// }
-// .p-61{
-//   animation-duration:1s;
-//   top:33%;
-//   left: 10%;
-// }
-
-// .p-71{
-//   animation-duration:4s;
-//   left: 50%;
-// }
-// .p-81{
-//   animation-duration:1s;
-//   top:10%;
-//   left: 30%;
-// }
-// .p-91{
-//   animation-duration:4s;
-//   top:40%;
-//   left: 60%;
-// }
 
 h1,h3,p,label {
   color: whitesmoke;
