--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,21 @@ canvas {
   height: 100vh;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+
+  input, textarea {
+    opacity: 0.4;
+  }
+
+  button {
+    color: #737277;
+    opacity: 0.5;
+    height: 20px;
+  }
+
+}
 
 .logogroup  {
 display: flex;
@@ -26,6 +41,7 @@ height: 10vh;
 .logo-tk{
   max-height: 100px;
   max-width: 100px;
+  margin-left: -6px;
 }
 
 .logo-yt{
