--- a/src/index.scss
+++ b/src/index.scss
@@ -3,16 +3,17 @@ $s: 1000; // star數量 кількість
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
+p {
+  text-align:center;
+}
 
 #header {
   position: relative;
-  font-size: 48px;
+  font-size: 14px;
   font-weight: bold;
   letter-spacing: 4px;
   text-align: center;
   color: #fff;
-  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #0ff, 0 0 70px #0ff, 0 0 80px #0ff, 0 0 100px #0ff, 0 0 150px #0ff;
-  animation: warp-speed 5s linear 1;
 }
 
 @keyframes warp-speed {
